@@ -46,46 +46,126 @@ import Gaffer
 # generate documentation.
 class Metadata :
 
-	## Registers a textual description for nodes of the specified type.
-	# The description may either be a string or a callable which will compute
-	# a description when passed a node instance. As a convenience all additional
-	# arguments are paired up and passed to calls to registerPlugDescription().
+	## Registers a named value associated with a particular node type. The
+	# value may optionally be a callable taking a node instance - this defers the
+	# computation of the value until it is looked up with nodeValue().
 	@classmethod
-	def registerNodeDescription( cls, nodeType, description, *args ) :
-				
-		assert( ( len( args ) % 2 ) == 0 )
-		
+	def registerNodeValue( cls, nodeType, key, value ) :
+
 		if isinstance( nodeType, IECore.TypeId ) :
 			nodeTypeId = nodeType
 		else :
 			nodeTypeId = nodeType.staticTypeId()
-			
-		cls.__nodeDescriptions[nodeTypeId] = description
 	
-		for i in range( 0, len( args ), 2 ) :
-		
-			plugPath = args[i]
-			assert( " " not in plugPath )
-			cls.registerPlugDescription( nodeTypeId, plugPath, args[i+1] )
+		nodeValues = cls.__nodeValues.setdefault( nodeTypeId, {} )
+		nodeValues[key] = value
 	
-	## Returns a description for the specified node instance.
+	## Looks up a previously registered value for the specified
+	# Node instance. Returns None if no such value is found.
 	@classmethod
-	def nodeDescription( cls, node ) :
+	def nodeValue( cls, nodeInstance, key ) :
 	
-		nodeTypeId = node.typeId()
+		nodeTypeId = nodeInstance.typeId()
 		while nodeTypeId != IECore.TypeId.Invalid :
 			
-			description = cls.__nodeDescriptions.get( nodeTypeId, None )
-			if description is not None :
-				if callable( description ) :
-					return description( node )
-				else :
-					return description
-					
+			values = cls.__nodeValues.get( nodeTypeId, None )
+			if values is not None :
+				value = values.get( key, None )
+				if value is not None :
+					if callable( value ) :
+						return value( nodeInstance )
+					else :
+						return value
+
 			nodeTypeId = IECore.RunTimeTyped.baseTypeId( nodeTypeId )
+
+		return None
 		
-		return ""
+	## Registers a textual description for nodes of the specified type,
+	# along with optional metadata for each plug. This is merely a convenience
+	# function which calls registerNodeValue() and registerPlugValue() behind
+	# the scenes. The additional arguments are paired up and passed to calls to
+	# registerPlugValue(). The value in each pair may either be a string in
+	# which case it is registered as the plug description, or a dictionary in
+	# which case it is used to generate multiple calls to registerPlugValue().
+	@classmethod
+	def registerNodeDescription( cls, nodeType, description, *args ) :
+
+		assert( ( len( args ) % 2 ) == 0 )
+
+		cls.registerNodeValue( nodeType, "description", description )
+
+		for i in range( 0, len( args ), 2 ) :
+
+			plugPath = args[i]
+			assert( " " not in plugPath )
+			if isinstance( args[i+1], basestring ) :
+				cls.registerPlugDescription( nodeType, plugPath, args[i+1] )
+			else :
+				for key, value in args[i+1].items() :
+					cls.registerPlugValue( nodeType, plugPath, key, value )
+
+	## Returns a description for the specified node instance. This is just
+	# a convenience returning nodeValue( node, "description" ), or the
+	# empty string if no description has been registered.
+	@classmethod
+	def nodeDescription( cls, nodeInstance ) :
+
+		return cls.nodeValue( nodeInstance, "description" ) or ""
+	
+	## Registers a named value associated with particular plugs on a particular
+	# node type. The plugPath may be a string optionally containing fnmatch
+	# wildcard characters or be a regex for performing more complex matches.
+	# The value may optionally be a callable taking a plug instance - this defers
+	# the computation of the value until it is looked up with plugValue().
+	@classmethod
+	def registerPlugValue( cls, nodeType, plugPath, key, value ) :
+
+		if isinstance( nodeType, IECore.TypeId ) :
+			nodeTypeId = nodeType
+		else :
+			nodeTypeId = nodeType.staticTypeId()
+
+		if isinstance( plugPath, basestring ) :
+			plugPath = re.compile( fnmatch.translate( plugPath ) )
+		else :
+			assert( type( plugPath ) is type( re.compile( "" ) ) )
+
+		nodeValues = cls.__nodeValues.setdefault( nodeTypeId, {} )
+		plugValuesContainer = nodeValues.setdefault( "__plugValues", {} )
+		plugValues = plugValuesContainer.setdefault( plugPath, {} )
+		plugValues[key] = value
+	
+	## Looks up a previously registered value for the specified
+	# Plug instance. Returns None if no such value is found.
+	@classmethod
+	def plugValue( cls, plugInstance, key ) :
+	
+		node = plugInstance.node()
+		if node is None :
+			return None
+			
+		plugPath = plugInstance.relativeName( node )
 		
+		nodeTypeId = node.typeId()
+		while nodeTypeId != IECore.TypeId.Invalid :
+
+			nodeValues = cls.__nodeValues.get( nodeTypeId, None )
+			if nodeValues is not None :
+				plugValuesContainer = nodeValues.get( "__plugValues", {} )
+				for plugPathRegex, plugValues in plugValuesContainer.items() :
+					if plugPathRegex.match( plugPath ) :
+						plugValue = plugValues.get( key, None )
+						if plugValue is not None :
+							if callable( plugValue ) :
+								return plugValue( plugInstance )
+							else :
+								return plugValue
+			
+			nodeTypeId = IECore.RunTimeTyped.baseTypeId( nodeTypeId )
+
+		return None
+
 	## Registers a textual description for the specified plug on nodes of the
 	# specified type. The plugPath may be a string optionally containing fnmatch
 	# wildcard characters or be a regex for performing more complex matches.
@@ -93,50 +173,15 @@ class Metadata :
 	# a description when passed a node instance.
 	@classmethod
 	def registerPlugDescription( cls, nodeType, plugPath, description ) :
-	
-		if isinstance( nodeType, IECore.TypeId ) :
-			nodeTypeId = nodeType
-		else :
-			nodeTypeId = nodeType.staticTypeId()
-		
-		if isinstance( plugPath, basestring ) :
-			plugPath = re.compile( fnmatch.translate( plugPath ) )
-		else :
-			assert( type( plugPath ) is type( re.compile( "" ) ) )
-				
-		plugDescriptions = cls.__plugDescriptions.setdefault( nodeTypeId, [] )
-		plugDescriptions.insert(
-			0,
-			IECore.Struct(
-				plugPathMatcher = plugPath,
-				description = description
-			)
-		)
-	
-	## Returns a description for the specified plug instance.
-	@classmethod
-	def plugDescription( cls, plug ) :
-	
-		node = plug.node()
-		if node is None :
-			return ""
-			
-		plugPath = plug.relativeName( node )
-		
-		nodeTypeId = node.typeId()
-		while nodeTypeId != IECore.TypeId.Invalid :
-			plugDescriptions = cls.__plugDescriptions.get( nodeTypeId, None )
-			if plugDescriptions is not None :
-				for d in plugDescriptions :
-					if d.plugPathMatcher.match( plugPath ) :
-						if callable( d.description ) :
-							return d.description( plug )
-						else :
-							return d.description
-			
-			nodeTypeId = IECore.RunTimeTyped.baseTypeId( nodeTypeId )
 
-		return ""
+		cls.registerPlugValue( nodeType, plugPath, "description", description )
+
+	## Returns a description for the specified plug instance. This is just
+	# a convenience returning plugValue( plug, "description" ), or the
+	# empty string if no description has been registered.
+	@classmethod
+	def plugDescription( cls, plugInstance ) :
+
+		return cls.plugValue( plugInstance, "description" ) or ""
 		
-	__nodeDescriptions = {}
-	__plugDescriptions = {}
+	__nodeValues = {}
